@@ -1,5 +1,6 @@
 * Fri Sep 14 2007 Jesse Keating <jkeating@redhat.com>
 - Create repoview content in the tree
+- Move the .composeinfo file into the directory we actually publish
 
 * Wed Sep 12 2007 Jesse Keating <jkeating@redhat.com>
 - Remove python2.5 needs (Mark McLoughlin)
